SSCSCI-1765 - multiple hearing migrations (#69)
* add multiplehearingsOutcome migration

* fix json split

* add test

* Bumping chart version/ fixing aliases

* use assertj library

* linkedhashmap to hashmap

* SSCSCI-1765: populate hearingIdMap and caseList in one loop

* SSCSCI-1765: fix build and test failures

* SSCSCI-1765: fix test and checkstyle failures

* SSCSCI-1765: switch entry with pair for clarity

* SSCSCI-1765: switch entry with pair for clarity

* SSCSCI-1765: switch entry with pair for clarity

* SSCSCI-1765: simplify hearingId mapping changes

---------

Co-authored-by: hmcts-jenkins-j-to-z <61242337+hmcts-jenkins-j-to-z[bot]@users.noreply.github.com>
Co-authored-by: taleb <tech@benouaer.com>