@@ -9,20 +9,33 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CaseLoaderTest {
 
-    private static final String VALID_ENCODED_DATA_STRING = "eJyLrlYqSk1LLUrNS05VslIyNLOwNDYyNzc0NDUxMjSyVKrVQVNgbmBobG"
-        + "pkYmYGVGNkYqJUGwsAjiESMQ==";
+    private static final String ENCODED_STRING = "eJyLrlYqSk1LLUrNS05VslIyNDeyNDM2NDEytzA3MDQ3VaqNBQC1oglo";
+    private static final String ENCODED_HEARING_STRING = "eJyLrlYqSk1LLUrNS05VslIyNDeyNDM2NDEytzA3MDQ3VdJRykhNLMrMS"
+        + "/d0AUkbGZso1cYCAJvGDos=";
     private static final String INVALID_ENCODED_DATA_STRING = "xxxxxxxxxxxxxxx";
 
 
     @Test
     void givenValidEncodedString_thenReturnListOfCases() {
-        CaseLoader caseLoader = new CaseLoader(VALID_ENCODED_DATA_STRING);
+        CaseLoader caseLoader = new CaseLoader(ENCODED_STRING);
 
         var result = caseLoader.findCases();
+
         assertNotNull(result);
         assertFalse(result.isEmpty());
-        assertEquals(1689327711542129L, result.get(0).getId());
-        assertEquals("SSCS", result.get(0).getJurisdiction());
+        assertEquals(1729631427870175L, result.getFirst().getId());
+        assertEquals("SSCS", result.getFirst().getJurisdiction());
+    }
+
+    @Test
+    void givenValidEncodedStringWithHearingId_thenReturnListOfCasesAndHearingIdMap() {
+        CaseLoader caseLoader = new CaseLoader(ENCODED_HEARING_STRING);
+
+        var result = caseLoader.mapCaseRefToHearingId();
+
+        assertNotNull(result);
+        assertFalse(result.isEmpty());
+        assertEquals("1234", result.get("1729631427870175"));
     }
 
     @Test
@@ -30,6 +43,17 @@ public class CaseLoaderTest {
         CaseLoader caseLoader = new CaseLoader(INVALID_ENCODED_DATA_STRING);
 
         var result = caseLoader.findCases();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void givenInvalidEncodedString_thenReturnEmptyListAndMap() {
+        CaseLoader caseLoader = new CaseLoader(INVALID_ENCODED_DATA_STRING);
+
+        var result = caseLoader.mapCaseRefToHearingId();
+
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
